syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.hospital";
option java_outer_classname = "ContinuousAssessment";

service PatientProfileService {
  rpc CreatePatientProfile(CreatePatientProfileRequest) returns (CreatePatientProfileResponse) {}

  rpc GetPatientMeals(GetPatientMealsRequest) returns (GetPatientMealsResponse) {}

  rpc UpdatePatientMeals(UpdatePatientMealsRequest) returns (UpdatePatientMealsResponse) {}
}

message CreatePatientProfileRequest {
  int32 age = 1;
  int32 weight = 2;
  int32 height = 3;
}

message CreatePatientProfileResponse {
  string confirmation = 1;
}

message GetPatientMealsRequest {
  string patient_id = 1;
}
message GetPatientMealsResponse {
  repeated string meals = 1;
}

message UpdatePatientMealsRequest {
  string patient_id = 1;
  repeated string meals = 2;
}

message UpdatePatientMealsResponse {
  string confirmation = 1;
}